--- a/sumset_cover.tex
+++ b/sumset_cover.tex
@@ -24,23 +24,113 @@
 
 \section{Minimum cardinality sumset covers}
 	\subsection{Definicja}
+		\begin{frame}
+			def. h-iterated sumset,
+		
+			def. sumset (suma niesk. h-iterated sumset)
+		
+			def. problemu
+		\end{frame}
+		
 	\subsection{Motywacja}
+		\begin{frame}
+			radioterapia
+		\end{frame}	
+			
 	\subsection{NP-zupełność}
+		\begin{frame}
+			fakt o NP-zupełności
+		\end{frame}
+		
 \section{Minimum cardinality [2]-sumset covers}
 	\subsection{Definicja}
+		\begin{frame} \frametitle{W czym rzecz?}
+			Def.: [h]-sumset zbioru $ X $
+			
+			$ [h]X = \bigcup_{i=1}^{h} iX $
+			
+			Def.: [h]-sumset cover zbioru $ S \subset N^{+} $ to taki zbiór $ X \subset N^{+} $ że $ S \subset [h]X $			
+			
+			Problem: Minimum cardinality [h]-sumset cover
+			
+			Dla danego zbioru $ S \subset N^{+} $ znaleźć minimalny w sensie liczności [h]-sumset cover $ X $ zbioru $ S $. Wtedy $ |X| $ to [h]-sumset rank zbioru $ S $ (piszemy $ |X| = rk_{h}(S) $).
+			
+			Def.: Zbiór $ S \subset N^{+} $ jest [h]-simplifiable, jeśli $ rk_{h}(S) < |S| $
+		\end{frame}
+		
 	\subsection{Przykłady}
+		\begin{frame} \frametitle{Przykłady}
+			Przykład 1:
+			
+			$ S = \lbrace 1,2,...,11 \rbrace $
+			
+			$ X = \lbrace 1,3,5,6 \rbrace $
+		\end{frame}
+			
+		\begin{frame} \frametitle{Przykłady}
+			Przykład 2:
+			
+			$ S = \lbrace 4,5,6 \rbrace $
+			
+			$ X = \lbrace 2,3 \rbrace $
+		\end{frame}
+		
+		\begin{frame} \frametitle{Przykłady}		
+			Przykład 3:
+			
+			$ S =  \lbrace 4,7,10 \rbrace $						
+		\end{frame}
+		
 \section{Powiązane problemy}
 	\subsection{Postage stamp}
+		\begin{frame}
+		\end{frame}
+		
 	\subsection{Covering the set of strings}
+		\begin{frame}
+		\end{frame}
+		
 \section{Trudność problemu}
 	\subsection{Proste ograniczenia}
+		\begin{frame}
+			lemat 1 z "On finding..."
+		\end{frame}
+		
 	\subsection{NP-trudność}
+		\begin{frame} \frametitle{Nie miejmy złudzeń...}
+			Fakt: Stwierdzenie, czy dany zbiór $ S \subset N^{+} $ jest [2]-simplifiable jest problemem NP-trudnym.
+		\end{frame}
+		
 	\subsection{APX-trudność}
+		\begin{frame} \frametitle{Aproksymacja też słabo...}
+			Def.: Problem APX-trudny
+		
+			Fakt: Problem obliczania [h]-sumset rank zbioru $ S \subset N^{+} $ jest APX-trudny.
+		\end{frame}
+		
 \section{Rozwiązanie}
 	\subsection{Przypadek szczególny}
+		\begin{frame} \frametitle{Przypadek $ S = \lbrace 1,2,...,n \rbrace $}
+			Lemat: Niech $ S = \lbrace 1,2,...,n \rbrace $. Wtedy $ rk_{2}(S) = \Theta(\sqrt{n}) $
+		\end{frame}
+		
 	\subsection{Znany algorytm}
+		\begin{frame}
+		\end{frame}
+		
 \section{Kwestie otwarte}
 	\subsection{Silna NP-trudność}
+		\begin{frame} \frametitle{Do zrobienia: silna NP-trudność}
+			Def.: Problem silnie NP-trudny
+			
+			Pytanie: Czy problem obliczania [h]-sumset rank zbioru $ S \subset N^{+} $ jest silnie NP-trudny?
+		\end{frame}
+		
 	\subsection{Ciekawa hipoteza}
+		\begin{frame} \frametitle{Do zrobienia: hipoteza o $ S = \lbrace 1,2,...,n \rbrace $}
+			Hipoteza: Dla każdej liczby naturalnej $ n $ istnieje minimum cardinality [2]-sumset cover $ X $ zbioru $ \lbrace 1,2,...,n \rbrace $ taki, że $ max(X) \leq \lceil \frac{n}{2} \rceil + 1 $
+			
+			Zweryfikowane dla $ n \leq 80 $, przy czym dla $ n \notin \lbrace 45,46,61,62 \rbrace $ dodatkowo $ max(X) \leq \lceil \frac{n}{2} \rceil $
+		\end{frame}
 
 \end{document} 
