--- a/sumset_cover.tex
+++ b/sumset_cover.tex
@@ -133,4 +133,15 @@
 			Zweryfikowane dla $ n \leq 80 $, przy czym dla $ n \notin \lbrace 45,46,61,62 \rbrace $ dodatkowo $ max(X) \leq \lceil \frac{n}{2} \rceil $
 		\end{frame}
 
+\section{Bibliografia}
+	\begin{frame} \frametitle{Nasze źródła}
+		\begin{itemize}
+			\item M.J. Collins, D. Kempe, J. Saia, and M. Young. Nonnegative integral
+subset representations of integer sets. Information Processing Letters, 101, pp. 129–133, 2007.
+			\item I. Fagnot, G. Fertin, S. Vialette. On finding small 2-generating sets. COCOON'2009, pp. 378–387.
+			\item L. Bulteau, G. Fertin, R. Rizzi, S. Vialette. Some algorithmic results
+for [2]-sumset covers. Information Processing Letters, 115, pp.1-5, 2015.
+		\end{itemize}
+	\end{frame}
+	
 \end{document} 
