--- a/sumset_cover.tex
+++ b/sumset_cover.tex
@@ -18,14 +18,13 @@
 	\titlepage
 \end{frame}
 
-\begin{frame}
-	\frametitle{Plan prezentacji}
+\begin{frame}{Plan prezentacji}
 	\tableofcontents
 \end{frame}
 
 \section{Sumsetowe pokrycia o minimalnej mocy}
 	\subsection{Definicja}
-		\begin{frame} \frametitle{Podstawowe definicje}
+		\begin{frame}{Podstawowe definicje}
             Def.: h-iterowany sumset zbioru $ X $
             $ hX = \lbrace x_1 + x_2 + ... + x_h : x_1,x_2,...,x_h \in X \rbrace $
             
@@ -46,7 +45,7 @@
 		
 \section{[2]-sumsetowe pokrycia o minimalnej mocy}
 	\subsection{Definicja}
-		\begin{frame} \frametitle{W czym rzecz?}
+		\begin{frame}{W czym rzecz?}
 			Def.: [h]-sumset zbioru $ X $
 			
 			$ [h]X = \bigcup_{i=1}^{h} iX $
@@ -61,7 +60,7 @@
 		\end{frame}
 		
 	\subsection{Przykłady}
-		\begin{frame} \frametitle{Przykłady}
+		\begin{frame}{Przykłady}
 			Przykład 1:
 			
 			$ S = \lbrace 1,2,...,11 \rbrace $
@@ -69,7 +68,7 @@
 			$ X = \lbrace 1,3,5,6 \rbrace $
 		\end{frame}
 			
-		\begin{frame} \frametitle{Przykłady}
+		\begin{frame}{Przykłady}
 			Przykład 2:
 			
 			$ S = \lbrace 4,5,6 \rbrace $
@@ -77,7 +76,7 @@
 			$ X = \lbrace 2,3 \rbrace $
 		\end{frame}
 		
-		\begin{frame} \frametitle{Przykłady}		
+		\begin{frame}{Przykłady}		
 			Przykład 3:
 			
 			$ S =  \lbrace 4,7,10 \rbrace $						
@@ -100,12 +99,12 @@
 		\end{frame}
 		
 	\subsection{NP-trudność}
-		\begin{frame} \frametitle{Nie miejmy złudzeń...}
+		\begin{frame}{Nie miejmy złudzeń...}
 			Fakt: Stwierdzenie, czy dany zbiór $ S \subset N^{+} $ jest [2]-upraszczalny jest problemem NP-trudnym.
 		\end{frame}
 		
 	\subsection{APX-trudność}
-		\begin{frame} \frametitle{Aproksymacja też słabo...}
+		\begin{frame}{Aproksymacja też słabo...}
 			Def.: Problem APX-trudny
 		
 			Fakt: Problem obliczania [h]-sumsetowego rzędu zbioru $ S \subset N^{+} $ jest APX-trudny.
@@ -113,7 +112,7 @@
 		
 \section{Rozwiązanie}
 	\subsection{Przypadek szczególny}
-		\begin{frame} \frametitle{Przypadek $ S = \lbrace 1,2,...,n \rbrace $}
+		\begin{frame}{Przypadek $ S = \lbrace 1,2,...,n \rbrace $}
 			Lemat: Niech $ S = \lbrace 1,2,...,n \rbrace $. Wtedy $ rk_{2}(S) = \Theta(\sqrt{n}) $
 		\end{frame}
 		
@@ -123,21 +122,21 @@
 		
 \section{Kwestie otwarte}
 	\subsection{Silna NP-trudność}
-		\begin{frame} \frametitle{Do zrobienia: silna NP-trudność}
+		\begin{frame}{Do zrobienia: silna NP-trudność}
 			Def.: Problem silnie NP-trudny
 			
 			Pytanie: Czy problem obliczania [2]-sumsetowego rzędu zbioru $ S \subset N^{+} $ jest silnie NP-trudny?
 		\end{frame}
 		
 	\subsection{Ciekawa hipoteza}
-		\begin{frame} \frametitle{Do zrobienia: hipoteza o $ S = \lbrace 1,2,...,n \rbrace $}
+		\begin{frame}{Do zrobienia: hipoteza o $ S = \lbrace 1,2,...,n \rbrace $}
 			Hipoteza: Dla każdej liczby naturalnej $ n $ istnieje [2]-sumsetowe pokrycie $ X $ o minimalnej mocy zbioru $ \lbrace 1,2,...,n \rbrace $ takie, że $ max(X) \leq \lceil \frac{n}{2} \rceil + 1 $
 			
 			Zweryfikowane dla $ n \leq 80 $, przy czym dla $ n \notin \lbrace 45,46,61,62 \rbrace $ dodatkowo $ max(X) \leq \lceil \frac{n}{2} \rceil $
 		\end{frame}
 
 \section{Bibliografia}
-	\begin{frame} \frametitle{Nasze źródła}
+	\begin{frame}{Nasze źródła}
 		\begin{itemize}
 			\item M.J. Collins, D. Kempe, J. Saia, and M. Young. Nonnegative integral
 subset representations of integer sets. Information Processing Letters, 101, pp. 129–133, 2007.
