suggestion of improvements to postage stamp problem section

--- a/sumset_cover.tex
+++ b/sumset_cover.tex
@@ -94,8 +94,11 @@
 		
 \section{Powiązane problemy}
 	\subsection{Znaczki pocztowe}
-		\begin{frame}
-			\begin{block}{Znaczki pocztowe}
+		\begin{frame}{Znaczki pocztowe}
+			Szczerze mowiac, moim zdaniem troche slabo jest to opisane. Ludzie zwykle chca konkretow:
+			- formalna definicja (matematyczna a nie jakiestam znaczki; o intuicjach mozna powiedziec slownie, a niekoniecznie trzeba je wrzucac na slajdy), zeby bylo widac powiazanie z naszym problemem
+			- zlozonosc znanych algorytmow (tez interesujaca, bo okazuje sie, ze sa to algorytmy FPT tak, jak nasz)
+			\begin{block}{Znaczki pocztowe (\rmfamily \textsc{Postage Stamp Problem})}
                 Zagadka matematyczna jako problem.
                 Chcemy wysłać list, ale mamy ograniczone miejsce na znaczki, oraz podane wartości znaczków.
                 Musimy podać najmniejszą wartość, której nie możemy uzyskać za pomocą znaczków z ustalonym ograniczeniem ich ilości.
@@ -148,7 +151,6 @@
 			\begin{exampleblock}{Fakt}
 				Stwierdzenie, czy dany zbiór $ S \subset \N^{+} $ jest [2]-upraszczalny jest problemem NP-trudnym.
 			\end{exampleblock}
-				
 		\end{frame}
 		
 	\subsection{APX-trudność}
